Quorum/Library/Tests/TypeChecker/Pass/ExpAssignObjectIntObj.quorum
class Main
    action Main
        Integer i
        Object o        
        i:SetValue(5)
        o = cast(Object, i)
        if o:Equals(i)
            output "passed"
        end
    end
end
