Quorum/Library/Tests/TypeChecker/Fail/ExpAssignNumberIntObjField.quorum
class Main
    Integer i
    number num = 0.0
    action Main
        i:SetValue(5)
        num = cast(number, i)
    end
end